force-app/main/default/objects/CPQ_Lookup_Table_Nested_Product_Quote__c/CPQ_Lookup_Table_Nested_Product_Quote__c.object-meta.xml
<CustomObject>
    <description>SOX object - Used as Lookup table for Expansion Quotes in Product rules to Show/Hide Products. The Products(HW, Add On (RBK SKUs)) that are selected will have impact on the Net Total of the Quote.</description>
    <label>CPQ Lookup Table-Nested Product Quote</label>
    <nameField>
        <displayFormat>PRNTQ-{000000}</displayFormat>
        <label>CPQ LookupTable-NestedProduct Quote Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CPQ Lookup Table-Nested Product Quote</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>