force-app/main/default/objects/CPQ_Lookup_Table_Nested_Product_Quote__c/fields/Configurator__c.field-meta.xml
<CustomField>
    <fullName>Configurator__c</fullName>
    <description>Restricting with new identifier for E1000</description>
    <label>Configurator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>