force-app/main/default/objects/CPQ_Lookup_Table_Nested_Product_Quote__c/fields/Consumption_Type__c.field-meta.xml
<CustomField>
    <fullName>Consumption_Type__c</fullName>
    <label>Consumption Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>DR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>