force-app/main/default/objects/CPQ_Lookup_Table_Nested_Product_Quote__c/fields/Deal_Ops_Exception__c.field-meta.xml
<CustomField>
    <fullName>Deal_Ops_Exception__c</fullName>
    <label>Deal Ops Exception</label>
    <length>255</length>
    <type>Text</type>
</CustomField>