force-app/main/default/objects/CPQ_Lookup_Table_Nested_Product_Quote__c/fields/Deal_Ops_LOD_Exception__c.field-meta.xml
<CustomField>
    <fullName>Deal_Ops_LOD_Exception__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deal Ops LOD Exception</label>
    <type>Checkbox</type>
</CustomField>