force-app/main/default/objects/CPQ_Lookup_Table_Nested_Product_Quote__c/fields/Is_Available_for_F10000__c.field-meta.xml
<CustomField>
    <fullName>Is_Available_for_F10000__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Available for F10000</label>
    <type>Checkbox</type>
</CustomField>