force-app/main/default/objects/CPQ_Lookup_Table_Nested_Product_Quote__c/fields/Payment_Options__c.field-meta.xml
<CustomField>
    <fullName>Payment_Options__c</fullName>
    <label>Payment Options</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prepay</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>