force-app/main/default/objects/CPQ_Lookup_Table_Nested_Product_Quote__c/fields/Rubrik_Suite__c.field-meta.xml
<CustomField>
    <fullName>Rubrik_Suite__c</fullName>
    <label>Rubrik Suite</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Foundation</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Complete Pro</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
                <isActive>false</isActive>
                <label>Premium</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>